--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     </string>
     <string name="login_button">Login</string>
     <string name="register_button">register</string>
+    <string name="text_email">email</string>
+    <string name="text_password">password</string>
 </resources>
