feat: viewmodel register user

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,10 @@
     <string name="text_email">Email</string>
     <string name="text_password">Password</string>
     <string name="text_name">Name</string>
+    <string name="text_horee">Horee!</string>
+    <string name="text_success_register">Anda berhasil Mendaftar</string>
+    <string name="text_next">Lanjut</string>
+    <string name="email_already_used">email already used</string>
+    <string name="text_message_email_used">email already used, try to login with this email or register use anothe email</string>
+    <string name="request_time_out">time connection to long</string>
 </resources>
