--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="user_not_found">Email Not Register</string>
     <string name="invalid_password">Invalid password</string>
     <string name="text_ok">ok</string>
+    <string name="desc_story_image">story image</string>
 </resources>
